--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 aniso8601==9.0.1
 astroid==2.11.5
 attrs==21.4.0
-click
+click==8.1.3
 dill==0.3.4
 Flask==2.1.2
 flask-restx==0.5.1
+gunicorn==20.1.0
 importlib-metadata==4.11.3
 importlib-resources==5.7.1
 isort==5.10.1
